# lake

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
.claude/commands/: diff-breakdown.md  pr-text.md
.github/: dependabot.yml
.github/workflows/: go.yml  release.docker.yml
agent/: README.md
agent/evals/: cypher_generation_test.go  helpers_test.go  link_utilization_test.go  multi_hop_latency_test.go  multicast_subscriber_bandwidth_test.go  network_paths_test.go  solana_validators_disconnected_test.go  sql_generation_literal_test.go
api/: .env.example  main.go
api/config/: config.go
api/handlers/: auth_middleware.go  auth_test.go  auto_generate.go  catalog.go  catalog_test.go  chat.go  clickhouse.go  config.go  contributors.go  cypher_generate.go  cypher_test.go  db.go  devices.go  devices_test.go  env.go  env_test.go  errors.go  errors_test.go  field_values.go  generate.go  gossip_nodes.go  isis.go  links.go  links_test.go  main_test.go  mcp.go  mcp_test.go  metros.go  metros_test.go  multicast.go  multicast_test.go  outages.go  pagination.go  pagination_test.go  query.go  query_test.go  rewards.go  search.go  search_test.go  sessions_test.go  (+24 more)
api/rewards/: cache.go  queries.go  shapley.go  shapley_test.go
api/testing/: clickhouse.go  neo4j.go
docs/: slack-setup.md
indexer/: README.md  embed.go
scripts/: deploy-app.sh  dev-setup.sh  promote-image.sh  upload-web-assets.sh
shapley-cli/: Cargo.toml
shapley-cli/src/: main.rs
web/: eslint.config.js  index.html  package.json  vite.config.ts
(+180 files in other folders)
