[package]
name = "shapley-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
network-shapley = { git = "https://github.com/doublezerofoundation/network-shapley-rs.git", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
